# WattaMark

./: CMakeLists.txt  README.md  WattaMark.kdev4  org.kde.wattamark.desktop  org.kde.wattamark.json  org.kde.wattamark.metainfo.xml
.kdev4/: WattaMark.kdev4
android/: AndroidManifest.xml  build.gradle  version.gradle.in
src/: CMakeLists.txt  about.cpp  about.h  app.cpp  app.h  backend.cpp  backend.h  main.cpp  resources.qrc  wattamarkconfig.kcfg  wattamarkconfig.kcfgc
src/contents/ui/: About.qml  FileListDelegate.qml  WatermarkSelection.qml  main.qml
